--- a/app/src/main/res/layout/fragment_sport_left.xml
+++ b/app/src/main/res/layout/fragment_sport_left.xml
@@ -293,6 +293,49 @@
                     tools:visibility="visible" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/lin_game_rule"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/selector_tran_blue">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:gravity="center_vertical"
+                    android:paddingHorizontal="20dp">
+
+                    <ImageView
+                        android:layout_width="@dimen/margin_20"
+                        android:layout_height="@dimen/margin_20"
+                        android:src="@drawable/selector_menu_gamerule" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_12"
+                        android:text="@string/game_rule"
+                        android:textColor="@color/color_black_white"
+                        android:textSize="@dimen/textSize14sp" />
+
+                    <androidx.legacy.widget.Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                    <ImageView
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/ic_arrow_gray_right" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginHorizontal="@dimen/margin_20"
+                    android:background="@color/color_80C9CFD7" />
+            </LinearLayout>
 
         </LinearLayout>
 
