--- a/app/src/main/res/layout/activity_login_ok.xml
+++ b/app/src/main/res/layout/activity_login_ok.xml
@@ -383,21 +383,37 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingHorizontal="@dimen/margin_10"
-                android:paddingVertical="@dimen/margin_12"
+                android:paddingBottom="12dp"
                 android:layout_marginHorizontal="15dp"
                 android:background="@drawable/bg_white_radius_16_stoke_blue"
                 app:layout_constraintTop_toBottomOf="@id/lin_third">
-                <TextView
-                    android:id="@+id/tvPrivacy"
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingStart="10dp"
-                    android:gravity="start"
-                    android:textColor="@color/color_6D7693"
-                    android:textColorLink="@color/color_025BE8"
-                    android:textSize="@dimen/textSize12sp"
-                    android:lineSpacingExtra="3dp"
-                    android:text="@string/login_privacy" />
+                    android:orientation="horizontal"
+                    android:paddingTop="9dp">
+
+                    <ImageView
+                        android:id="@+id/ivPrivacy"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_marginTop="2dp"
+                        android:src="@drawable/ic_radiobtn_1_sel"/>
+
+                    <TextView
+                        android:id="@+id/tvPrivacy"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="5dp"
+                        android:gravity="start"
+                        android:textColor="@color/color_6D7693"
+                        android:textColorLink="@color/color_025BE8"
+                        android:textSize="@dimen/textSize12sp"
+                        android:lineSpacingExtra="3dp"
+                        android:text="@string/login_privacy" />
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
