--- a/app/src/main/res/layout/dialog_custom_alert.xml
+++ b/app/src/main/res/layout/dialog_custom_alert.xml
@@ -1,130 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_margin="26dp"
-    app:cardBackgroundColor="@color/color_191919_FCFCFC"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="0dp"
-    tools:context="org.cxct.sportlottery.ui.common.dialog.CustomAlertDialog">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="298dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:minWidth="300dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal"
+        android:background="@drawable/img_dialog_bg">
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:textColor="@color/color_CCCCCC_000000"
-            android:textSize="@dimen/textSize16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/divider2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+        <ImageView
+            android:id="@+id/ivStatus"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="標題" />
+            android:layout_marginTop="24dp"
+            android:src="@drawable/img_dialog_positive"/>
 
-        <View
-            android:visibility="gone"
-            android:id="@+id/divider2"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_191919_EEEFF0"
-            app:layout_constraintBottom_toTopOf="@id/sv_block_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivStatus">
 
-
-        <ScrollView
-            android:id="@+id/sv_block_content"
-            android:layout_width="0dp"
-            android:layout_marginHorizontal="12dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="14dp"
-            android:overScrollMode="never"
-            app:layout_constraintBottom_toTopOf="@id/block_bottom_bar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_max="170dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider2">
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:textColor="@color/color_0D2245"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="標題" />
 
             <TextView
                 android:id="@+id/tv_message"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="23dp"
+                android:gravity="center"
                 android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize14sp"
+                android:textSize="14sp"
+                android:lineSpacingExtra="2dp"
                 tools:text="訊息" />
 
-        </ScrollView>
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_191919_EEEFF0"
-            app:layout_constraintBottom_toTopOf="@id/block_bottom_bar"
-            app:layout_constraintTop_toBottomOf="@id/sv_block_content"
-            app:layout_constraintVertical_bias="1" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/block_bottom_bar"
-            android:layout_width="0dp"
-            android:layout_height="44dp"
-            android:gravity="center"
-            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:layout_marginHorizontal="23dp"
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/btn_negative"
-                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/bg_border_gray_round_8"
                 android:layout_width="wrap_content"
                 android:layout_height="44dp"
                 android:layout_weight="1"
-                android:background="@null"
-                android:minWidth="135dp"
-                android:minHeight="36dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="25dp"
                 android:text="@string/btn_cancel"
                 android:textColor="@color/color_FFFFFF_414655"
                 android:textSize="@dimen/textSize14sp"
                 android:textAllCaps="false"
                 android:textStyle="bold" />
 
-            <View
-                android:id="@+id/view_line"
-                android:layout_width="1dp"
-                android:layout_height="44dp"
-                android:background="@color/color_191919_EEEFF0"/>
-
             <Button
-                android:textAllCaps="false"
                 android:id="@+id/btn_positive"
-                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/bg_blue_radius_8"
                 android:layout_width="wrap_content"
                 android:layout_height="44dp"
                 android:layout_weight="1"
-                android:background="@null"
-                android:minWidth="135dp"
-                android:minHeight="36dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="25dp"
+                android:textAllCaps="false"
                 android:text="@string/btn_confirm"
-                android:textColor="@color/color_317FFF_0760D4"
+                android:textColor="@color/white"
                 android:textSize="@dimen/textSize14sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+    </LinearLayout>
+</FrameLayout>
