--- a/app/src/main/res/layout/dialog_pop_image.xml
+++ b/app/src/main/res/layout/dialog_pop_image.xml
@@ -40,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
+        app:cardBackgroundColor="@color/transparent"
         app:cardCornerRadius="@dimen/margin_16">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -49,6 +50,7 @@
             android:id="@+id/xbanner"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@color/transparent"
             app:layout_constraintDimensionRatio="362:580"
             app:AutoPlayTime="3500"
             app:pointSelect="@drawable/dot_8_blue_sel"
