--- a/app/src/main/res/layout/fragment_sport_list2.xml
+++ b/app/src/main/res/layout/fragment_sport_list2.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,6 +22,7 @@
             android:nestedScrollingEnabled="false"
             android:paddingLeft="5.5dp"
             android:clipToPadding="false"
+            android:scrollbars="vertical"
             tools:itemCount="1" />
 
     </LinearLayout>
