--- a/app/src/main/res/layout/dialog_bottom_select.xml
+++ b/app/src/main/res/layout/dialog_bottom_select.xml
@@ -48,9 +48,9 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
+        android:alpha="0.5"
         android:layout_alignParentBottom="true"
-        android:layout_marginHorizontal="14dp"
         android:background="@color/color_E3E8EE" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBtmData"
