--- a/app/src/main/res/layout/dialog_wins_betdetails.xml
+++ b/app/src/main/res/layout/dialog_wins_betdetails.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="332dp"
     android:layout_height="319dp"
-    android:layout_gravity="center"
     android:orientation="horizontal"
     android:background="@drawable/bg_wins_betdetails"
     android:id="@+id/rootView">
@@ -180,3 +184,4 @@
         android:text="@string/B036"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
