--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,7 @@
     <!--＊＊設定layout_gravity會導致NestedScrollView內的RecyclerView item移位-->
 
     <style name="CustomDialogStyle" parent="Theme.AppCompat.Dialog">
+        <item name="android:statusBarColor">@color/transparent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:gravity">center</item>
         <item name="android:windowSoftInputMode">stateHidden</item>
@@ -49,8 +50,8 @@
 
     <style name="FullScreen" parent="Theme.AppCompat.Dialog">
         <item name="android:statusBarColor">@color/transparent</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:gravity">center</item>
         <item name="android:windowIsFloating">false</item>
     </style>
 
@@ -138,10 +139,6 @@
         <item name="android:windowEnterAnimation">@anim/dialog_enter</item>
     </style>
 
-    <style name="Widget.AppTheme.MyView" parent="">
-        <item name="android:background">@color/gray_400</item>
-        <item name="exampleColor">@color/light_blue_400</item>
-    </style>
 
     <style name="lunchTheme" parent="AppTheme">
         <item name="android:statusBarColor">@color/transparent</item>
