--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -41,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_20"
+        android:layout_marginBottom="@dimen/margin_20"
         android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
         android:orientation="vertical"
         android:padding="1dp"
@@ -98,28 +99,17 @@
             app:srlEnableLoadMore="true"
             app:srlEnablePureScrollMode="true"
             >
-
-            <FrameLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_pay_type"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_pay_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:clipToPadding="false"
-                    android:overScrollMode="never"
-                    tools:itemCount="5"
-                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/content_feedback_record_list_rv"
-                    tools:orientation="vertical"
-                    tools:visibility="visible" />
-
-                <include
-                    tools:visibility="gone"
-                    android:id="@+id/view_no_record"
-                    layout="@layout/view_no_record"/>
-            </FrameLayout>
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:overScrollMode="never"
+                tools:itemCount="5"
+                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_feedback_record"
+                tools:orientation="vertical"
+                tools:visibility="visible" />
 
         </com.scwang.smart.refresh.layout.SmartRefreshLayout>
     </LinearLayout>
@@ -141,7 +131,8 @@
         android:visibility="gone"
         android:id="@+id/tv_no_data"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
+         android:layout_marginBottom="@dimen/margin_20"
         android:background="@color/color_191919_FCFCFC"
         android:gravity="center"
         android:text="@string/no_data"
