--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -263,7 +263,6 @@
                         android:id="@+id/btn_refresh_money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/margin_4"
                         android:background="@null"
                         android:contentDescription="@null"
                         android:padding="@dimen/margin_4"
@@ -271,7 +270,8 @@
                         android:src="@drawable/icon_money_refresh"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_account_balance"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/tv_account_balance" />
+                        app:layout_constraintTop_toTopOf="@+id/tv_account_balance"
+                        tools:ignore="SpeakableTextPresentCheck" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -379,7 +379,13 @@
                 </LinearLayout>
 
             </LinearLayout>
-
+            <org.cxct.sportlottery.ui.profileCenter.vip.view.UserVipView
+                android:id="@+id/userVipView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_8"
+                android:layout_marginHorizontal="@dimen/margin_15"
+                android:foreground="@drawable/fg_ripple" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
