--- a/app/src/main/res/layout/view_user_vip.xml
+++ b/app/src/main/res/layout/view_user_vip.xml
@@ -6,20 +6,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/linProgress"
     android:layout_width="match_parent"
-    android:layout_height="71dp"
-    android:background="@color/colorOrange"
+    android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:adjustViewBounds="true"
+        android:src="@drawable/bg_user_vip_top"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="bottom"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="@dimen/margin_10"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/margin_20"
-        android:layout_marginHorizontal="@dimen/margin_20">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="@dimen/margin_30">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical">
+            android:orientation="vertical"
+            android:gravity="center">
             <ImageView
                 android:id="@+id/ivCurrentLevel"
                 android:layout_width="@dimen/margin_28"
@@ -29,65 +36,67 @@
                 android:id="@+id/tvCurrentLevel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:layout_marginTop="@dimen/margin_4"
                 android:textStyle="bold"
                 android:textFontWeight="700"
                 android:fontFamily="@font/inter_regular"
-                android:textSize="@dimen/margin_18"
+                android:textSize="@dimen/textSize18sp"
                 android:textColor="@color/color_000000"
                 android:text="vip 4"/>
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginHorizontal="@dimen/margin_10"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/tvVipProgress"
-                android:layout_width="44dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_vip_progress"
-                android:gravity="center_horizontal"
-                android:textColor="@color/color_0D2245"
-                android:textStyle="bold"
-                android:textSize="@dimen/textSize12sp"
-                android:text="16%"/>
-            <ProgressBar
-                android:id="@+id/pbVip"
+            <org.cxct.sportlottery.ui.profileCenter.vip.view.VipProgressView
+                android:id="@+id/vipProgressView"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginBottom="10dp"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:progressDrawable="@drawable/progress_vip"
-                android:progress="50"/>
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/margin_8"
+                android:layout_gravity="right"
+                android:textSize="@dimen/textSize12sp"
+                android:textColor="@color/color_D48C1A"
+                android:text="next Level"/>
         </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical">
-        <TextView
-            android:id="@+id/tvNextLevel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/margin_18"
-            android:textColor="@color/color_000000"
-            android:text="vip 4"/>
+        android:orientation="vertical"
+        android:gravity="center">
         <ImageView
             android:id="@+id/ivNextLevel"
             android:layout_width="@dimen/margin_28"
             android:layout_height="@dimen/margin_28"
             android:src="@drawable/ic_vip_lv1"/>
+        <TextView
+            android:id="@+id/tvNextLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_4"
+            android:includeFontPadding="false"
+            android:textStyle="bold"
+            android:textFontWeight="700"
+            android:textSize="@dimen/textSize18sp"
+            android:textColor="@color/color_000000"
+            android:text="vip 4"/>
     </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
+        android:id="@+id/linBottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-10dp"
         android:padding="@dimen/margin_16"
         app:layout_constraintTop_toBottomOf="@id/linProgress"
         android:orientation="vertical"
-        android:background="@drawable/bg_white_radius_10_gray_stroke">
+        android:background="@drawable/bg_white_gradient_radius_10_white_stroke">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_24"
@@ -100,6 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="@dimen/margin_8"
                 android:textStyle="bold"
                 android:textFontWeight="700"
                 android:textSize="@dimen/textSize14sp"
